--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 jobs:
   test_pull_request:
-  runs-on: ubuntu-lastest
+  runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
