--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "firebase-tools": "^13.6.0",
     "jest": "^29.7.0",
+    "typescript": "^4.9.5",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
